--- a/gto/pom.xml
+++ b/gto/pom.xml
@@ -94,6 +94,13 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
+
+
 	</dependencies>
 	
 
