--- a/gto/pom.xml
+++ b/gto/pom.xml
@@ -62,9 +62,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>5.6.3</version>
+        </dependency>
 
 
-	</dependencies>
+    </dependencies>
 	
 
 	<build>
