--- a/gto/src/main/resources/application.properties
+++ b/gto/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=GTO
+gto.app.jwtSecret= gtoSecretKey
+gto.app.jwtExpirationMs= 86400000
